# photo-organiser-ai

./: .gitignore  LICENSE  README.md  calibrate_threshold.py  compute_face_embeddings.py  describe_image.py  event_clustering.py  extract_photo_exif.py  face_match_config.yaml  pyproject.toml
